--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30vh; 
+    height: 30vh;
+    padding: 2vh 5vw;
 }
 
 .image-container img {
@@ -12,6 +13,7 @@
     width: auto; /* Let the width adjust proportionally */
     opacity: 0; /* Initially hide the image */
     transition: opacity 2s ease; /* Add transition for opacity */
+    margin-right: 5vw;
 }
 
 /* Only hide the heading initially */
@@ -36,25 +38,33 @@ body{
 }
 
 h1 {
-    font-size: 45px; /* Adjust the font size as needed */
+    font-size: clamp(24px, 4vw, 45px); /* Adjust the font size as needed */
 }
 
 h4 {
-    font-size: 20px;
+    font-size: clamp(16px, 2vw, 20px);
     font-style: italic;
 }
 
 .caption {
-    font-size: 18px; /* Adjust the font size as needed */
-    text-align: center; /* Align the text to the center */
+    font-size: 1.1em;
+    text-align: center;
+    font-style: italic;
+    margin-top: 20px;
+    width: 100%;
+    max-width: 850px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 5px;
+    box-sizing: border-box;
 }
 
 .mainContainer{
     width:100%;
     max-width: 1200px;
-    /* outline: 1px solid black; */
     margin: auto;
-
+    padding: 0 5vw;
+    box-sizing: border-box;
 }
 
 .heading{
@@ -75,31 +85,26 @@ h4 {
 img{
     width: 100%;
 }
-.caption{
-    font-size: 1.3em;
-    /* margin:0; */
-    text-align: center;
-    font-style: italic;
-    margin-top: 20px;
-}
 
 /* graph 1 */
 
 #viz1 {
-    margin-top: -50px; 
-    width:80%;
+    width: 80%;
+    max-width: 680px;
+    margin-top: -50px;
 }
 
 #sideView {
-    /* overflow: scroll; */
-    /* width: 300px; Set the width of #sideView */
-    /* outline: 1px solid red; */
     width: 20%;
+    max-width: 170px;
 }
 
 #graphScrollbarWrapper{
     aspect-ratio: 1.72;
     display: flex;
+    width: 100%;
+    max-width: 850px;
+    margin: auto;
 }
 
 /* graph 2 */
@@ -165,26 +170,30 @@ img{
 }
 
 .spacer-5{
-    height:5vh;
+    height: 5vh;
     /* background-color: rgba(255, 166, 0, 0.34); */
 }
 
 .spacer-10{
-    height:10vh;
+    height: 10vh;
     /* background-color: rgba(255, 166, 0, 0.34); */
 }
 
 .spacer-30{
-    height:30vh;
+    height: 30vh;
     /* background-color: rgba(255, 166, 0, 0.34); */
 }
 
 .spacer-50{
-    height:50vh;
+    height: 50vh;
     /* background-color: rgba(255, 166, 0, 0.34); */
 
 }
 .spacer-100{
-    height:50vh;
+    height: 50vh;
     /* background-color: rgba(255, 166, 0, 0.34); */
+}
+
+.heading p {
+    font-size: clamp(14px, 1.5vw, 18px);
 }
